# dispatchProject

./: .gitignore  README.md
UnitTest/c_python/: CMakeLists.txt  EnginePy.cpp  EnginePy.hpp  Person.cpp  Person.hpp  detection.yaml  engine_api.py  main.cpp  mat2numpy.cpp  mat2numpy.h  multi_thread_sample.cpp  student.py  tracker_api.py
UnitTest/cpu_affinity/: cpu_affinity.cpp  cpu_thread_affinity  cpu_thread_affinity.cpp
UnitTest/deepStream_demo/: README.md  opencv_gstreamer_demo.py
UnitTest/deepStream_demo/rtsp/: CMakeLists.txt  deepstream_test1_app_demo_rtsp.cpp  dstest1_pgie_config.txt
UnitTest/deepStream_demo/rtsp_class/: CMakeLists.txt  dsHandler.cpp  dsHandler.h  main.cpp  test.cpp
UnitTest/deepStream_demo/test1/: CMakeLists.txt  deepstream-test1-app-ls  deepstream_test1_app.cpp  makefile
UnitTest/deepStream_demo/test4/: Makefile  deepstream_test4_app.c  dstest4_pgie_config.txt
UnitTest/engine/EngineServer/: app.py  face_engine.py  requirements.txt  rpcServer.py  run.sh  stop.sh  test.py  test_face.py
UnitTest/engine/EngineServer/Pet-face-lib/cfgs/: face_lib.yaml
UnitTest/engine/EngineServer/Pet-face-lib/tools/: _init_paths.py  face_lib.py
UnitTest/engine/EngineServer/config/: personDB.yaml  rtmpUrl.yaml
UnitTest/engine/EngineServer/log/: log.txt
UnitTest/engine/EngineServer/mobilefacenet_deep/: mobilefacenet.py
UnitTest/engine/EngineServer/static/DPH_Web/: package-lock.json  package.json
UnitTest/engine/EngineServer/static/css/: main.cba9467a.css  main.cba9467a.css.map
UnitTest/engine/EngineServer/static/js/: 0.7f37be4a.chunk.js  0.ae2e072d.chunk.js  1.0fcf5ccf.chunk.js  1.0fcf5ccf.chunk.js.map  1.68586bf2.chunk.js.map  1.7f5ef685.chunk.js.map  10.c2ab12c9.chunk.js  10.c2ab12c9.chunk.js.map  10.c84c90ea.chunk.js  10.ca60fd9b.chunk.js.map  10.fb963b85.chunk.js  10.fb963b85.chunk.js.map  11.357184b1.chunk.js.map  11.8a79cd41.chunk.js  11.8a79cd41.chunk.js.map  11.c38cf440.chunk.js  12.5e242024.chunk.js.map  12.8b1b3478.chunk.js  12.8b1b3478.chunk.js.map  13.28c7445f.chunk.js.map  13.876c7129.chunk.js  13.876c7129.chunk.js.map  14.7280d0e4.chunk.js  14.7280d0e4.chunk.js.map  15.209f4409.chunk.js.map  15.a63de47d.chunk.js  15.a63de47d.chunk.js.map  15.b6d8f32e.chunk.js  16.1445e04d.chunk.js  16.1445e04d.chunk.js.map  16.90a94046.chunk.js  16.ea33d819.chunk.js  16.ea33d819.chunk.js.map  16.f7a5675f.chunk.js  16.f7a5675f.chunk.js.map  17.8857fa1a.chunk.js  18.10c8a062.chunk.js.map  18.ea8c0057.chunk.js  18.ea8c0057.chunk.js.map  18.feb4c584.chunk.js.map  (+49 more)
UnitTest/engine/EngineServer/templates/: asset-manifest.json  index.html  service-worker.js
UnitTest/engine/TrackerEngineServer/: README.md  app.py  post_pic.py  requirements.txt  rpcClient.py  rpcServer.py  rpcServer_xxs.py  uwsgi.ini
UnitTest/engine/TrackerEngineServer/Pet-face-lib/core/: config.py
UnitTest/engine/TrackerEngineServer/Pet-face-lib/data/: README.md
UnitTest/engine/TrackerEngineServer/back/: rpcServer.py
UnitTest/engine/TrackerEngineServer/caffe2pth/: caffenet.py
UnitTest/engine/TrackerEngineServer/config/: personDB.yaml  rtmpUrl.yaml
UnitTest/engine/TrackerEngineServer/log/: log.txt
UnitTest/engine/TrackerEngineServer/static/DPH_Web/: package-lock.json  package.json
UnitTest/engine/TrackerEngineServer/static/js/: 0.36682ccf.chunk.js  0.4304fce3.chunk.js  0.4304fce3.chunk.js.map  0.7c741c00.chunk.js  0.8e3cf3fa.chunk.js  0.ae2e072d.chunk.js.map  1.01f3648a.chunk.js  1.01f3648a.chunk.js.map  1.68586bf2.chunk.js  1.7e974ef0.chunk.js  1.7e974ef0.chunk.js.map  1.7f5ef685.chunk.js  10.3fc23e7c.chunk.js  10.3fc23e7c.chunk.js.map  10.c84c90ea.chunk.js.map  10.ca60fd9b.chunk.js  11.357184b1.chunk.js  11.993f326b.chunk.js  11.993f326b.chunk.js.map  (+137 more)
UnitTest/engine/TrackerEngineServer/templates/: asset-manifest.json  index.html  service-worker.js
UnitTest/engine/TrackerEngineServer/tools/: utils.py
UnitTest/engine/TrackerEngineServer/utils/: config_utils.py
UnitTest/engine/gearman_c_test/: cpu_thread_affinity.cpp  gearman_clinet.py  gearman_worker.py  simple-gearman-client  simple-gearman-client.cpp  simple-gearman-worker  simple-gearman-worker.cpp
UnitTest/fisheye/: r.txt
UnitTest/fisheye/fisheye/: CMakeLists.txt
UnitTest/fisheye/fisheye/csrc/: calibrator.h  engine.cpp  engine.h  engine_fcos.cpp
UnitTest/fisheye/fisheye/csrc/cuda/: Makefile  decode.cu  decode.h  decode_fcos.cu  decode_fcos.h  gn  groupnorm.cu  groupnorm.h  nms.cu  nms.h  utils.h
UnitTest/fisheye/fisheye/csrc/plugins/: DecodePlugin.h  DecodePlugin_fcos.h  GN.h  Makefile  NMSPlugin.h  gn  gn_py.cpp  test_GN.cpp  test_onnx.cpp
UnitTest/fisheye/fisheye/dewarp/: Makefile  camera_view.cpp  camera_view.h  dewarp_agent.py  dewarper.cpp  dewarper.h  split.cu  split.h  use_dewarp.py
UnitTest/fisheye/fisheye/inferbase/: b  base64.cpp  base64.h  export_fcos.cpp  export_retinanet.cpp  infer_.cpp  infer_.h  infer_lib.cpp  infer_test.cpp  infer_test.h  python_route.cpp  python_route.h
UnitTest/fisheye/fisheye/py_extension/: D_set.json  ToDB.py  airport_untities.py  box_tracking.py  config.py  face_analysis_config.yaml  fishEye_lib.py  kalman_filter.py  pre_count_lib.py  rmtp.py  runProject.py  set.json  simple_module.py  tracker.py  ut.py
UnitTest/fisheye/fisheye/py_extension/Hungarian/: Hungarian.py  main.cpp
UnitTest/fisheye/interface/: CMakeLists.txt  cameraHandler.cpp  cameraHandler.h  test.cpp
UnitTest/fisheye/interface_mode/: CMakeLists.txt  cameraHandler.cpp  main.cpp  test.cpp
UnitTest/fisheye/interface_mode/fishCamHandler/: cameraGHandler.cpp  cameraHandler.cpp  cameraHandler.h
UnitTest/fisheye/interface_mode/gpu_handler/: cameraHandler.cpp  cameraHandler.h  main.cpp
UnitTest/fisheye/openGLDenmo/: test  test.cpp
UnitTest/fisheye/test/: CMakeLists.txt  Makefile  Makefile_ls  ls_test  test.cpp
UnitTest/gearman_c_test/: cpu_affinity  cpu_affinity.cpp  gearman_clinet.py  gearman_worker.py  simple-gearman-client  simple-gearman-client.cpp  simple-gearman-worker  simple-gearman-worker.cpp
UnitTest/gearman_c_test/rapidjson/: document.h
UnitTest/test_video/: make_video.py  run_py.sh
(+12 files in other folders)
